--- a/Demo_Template.yml
+++ b/Demo_Template.yml
@@ -1,7 +1,7 @@
 ---
 - name: Execute play 01
   hosts: localhost
-  gather_facts: yes
+  gather_facts: no
 
   vars:
     dummy_message: You can override this dummy_message variable with extra vars if you like.
